--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
     <title>CV Cristian Alessandria</title>
 </head>
 <body class="body">
+
+  <div class="row justify-content-center">
+    <div class="col-lg-6 col-md-6 col-sm-6 bg-info">
+      <div class="fotoPortada">
+        <img src="/recursos/Link.jpg" alt="">
+      </div>
+    </div>
+  </div>
 
     <section class="intro">
         <div class="container">
