--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-6 col-md-6 col-sm-6 bg-info">
       <div class="fotoPortada">
-        <img src="/recursos/Link.jpg" alt="">
+        <img src="./recursos/Link.jpg" alt="">
       </div>
     </div>
   </div>
