--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 </head>
 <body class="body">
 
-  <div class="row justify-content-center">
-    <div class="col-lg-6 col-md-6 col-sm-6 bg-info">
+
+  <div class="portada">
+    <img src="./recursos/Link.jpg" alt="">
+  </div>
+
+  <!-- <div class="row justify-content-center">
+    <div class="col-6 col-lg-6 col-md-6 col-sm-6 bg-info">
       <div class="fotoPortada">
         <img src="./recursos/Link.jpg" alt="">
       </div>
     </div>
-  </div>
+  </div> -->
 
     <section class="intro">
         <div class="container">
