--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
     <img src="./recursos/Link.jpg" alt="">
   </div>
 
-  <!-- <div class="row justify-content-center">
-    <div class="col-6 col-lg-6 col-md-6 col-sm-6 bg-info">
-      <div class="fotoPortada">
-        <img src="./recursos/Link.jpg" alt="">
-      </div>
-    </div>
-  </div> -->
+  <div class="row">
+    <div class="col-2 col-sm-2 col-md-2 col-lg-2 bg-info">
+      <section class="datosPersonales esquema">
+        <img src="./recursos/perfil.png" alt="">
+        Datos Personales
+      </section>
 
-    <section class="intro">
+      <section class="formacion esquema">
+        <img src="./recursos/perfil.png" alt="">
+        Formación
+      </section>
+    </div>
+    <div class="col-8 col-sm-8 col-md-8 col-lg-8 bg-warning">
+
+      <section class="intro">
         <div class="container">
           <h1>Experiencia laboral &darr;</h1>
         </div>
@@ -79,28 +85,25 @@
               <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
             </div>
           </li>
-          <li>
-            <div>
-              <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-            </div>
-          </li>
-          <li>
-            <div>
-              <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-            </div>
-          </li>
-          <li>
-            <div>
-              <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-            </div>
-          </li>
-          <li>
-            <div>
-              <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-            </div>
-          </li>
+
         </ul>
       </section>
+
+    </div>
+    <div class="col-2 col-sm-2 col-md-2 col-lg-2 bg-info">
+      <section class="experiencia esquema">
+        <img src="./recursos/perfil.png" alt="">
+        Experiencia
+      </section>
+
+      <section class="skills esquema">
+        <img src="./recursos/perfil.png" alt="">
+        Skills
+      </section>
+    </div>
+  </div>
+
+
       
       <script src="script.js"></script>
 </body>
